--- a/index.html
+++ b/index.html
@@ -21,5 +21,21 @@
 
       <h3><a href='/'>Icebreakers</a></h3>
     </header>
+    <main>
+      <div>
+        <h1>Icebreakers</h1>
+        <p>Break the ice and make friends for life</p>
+      </div>
+      
+      <div>
+        <h4>Question1</h4>
+          <p><a href='#'>Description1</a></p>
+        <h4>Question2</h4>
+          <p><a href='#'>Description2</a></p>
+      </div>
+    </main>
+    <footer>
+      <p>Footer</p>
+    </footer>
   </body>
 </html>
